services/ldap/ldap-server-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ldap
  labels:
    io.kompose.service: ldap-admin
spec:
  replicas: 1
  template:
    metadata:
      labels:
        application: ldap
    spec:
      terminationGracePeriodSeconds: 5
      containers:
      - name: ldap-admin 
        image: osixia/phpldapadmin:0.8.0
        ports:
        - containerPort: 80
      - name: ldap-host
        image: osixia/openldap:1.2.4
        ports:
        - containerPort: 389
        - containerPort: 636
        volumeMounts:
          - name: gluster-sldap
            mountPath: "/etc/ldap/slapd.d"
          - name: gluster-ldap
            mountPath: "/var/lib/ldap"
      volumes:
      - name: gluster-ldap
        persistentVolumeClaim:
          claimName: ldap-claim
      - name: gluster-sldap
        persistentVolumeClaim:
          claimName: sldap-claim
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    application: ldap
  name: ldap-svc
spec:
  externalName: ldap-svc
  type: NodePort
  ports:
  - name: admin-panel-tcp
    protocol: TCP
    port: 80
    targetPort: 80
  - name: host-ldap-ssl
    protocol: TCP
    port: 636
    targetPort: 636
  - name: host-ldap-tcp
    protocol: TCP
    port: 389
    targetPort: 389
  selector:
    application: ldap
  clusterIP: ${LDAP_IP}
---
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress
metadata:
 name: ldap-admin-ingress
 annotations:
   nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
 rules:
 - host: kero.ldap-admin.io
   http:
     paths:
     - path: /
       backend:
         serviceName: ldap-svc
         servicePort: 80
